tests/rgs/valid/condition_parentheses.rgs
ACTION run.
EVENT  spotted ENVIRONMENT.
CONDITION is_tired  MYSELF.
CONDITION is_armed  MYSELF.
CONDITION door_open ENVIRONMENT.

DURING ALWAYS:
    WHEN spotted ENVIRONMENT IF (is_tired MYSELF OR door_open ENVIRONMENT) AND NOT is_armed MYSELF:
        DO run.
