tests/rgs/semantic_errors/wrong_origin_event.rgs
ACTION run.
EVENT spotted ENVIRONMENT.
DURING ALWAYS:
    WHEN spotted MYSELF:
        DO run.
